# lol-profesor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN_SYSTEM_AND_IMPLEMENTATION_SDD.md  Dockerfile  Dockerfile.arm64  Dockerfile.dev  README.md  SETUP.md  cache.db  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: AI_MATCH_ANALYSIS.md  DESIGN_SYSTEM_AND_IMPLEMENTATION_SDD.md  NOTIFICATION_SYSTEM.md  SETUP.md  performance-metrics.md
server/: .env.example  Dockerfile.dev  package-lock.json  package.json
server/src/: cache.ts  index.ts
src/: App.tsx  TestApp.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/api/: champions.rs  groq_client.rs  mod.rs  riot_client.rs
src-tauri/src/commands/: analysis.rs  live.rs  matches.rs  mod.rs  player.rs  stats.rs
src-tauri/src/db/: analysis_cache.rs  lp_history.rs  match_cache.rs  migrations.rs  mod.rs  player_cache.rs  summoner_cache.rs
src-tauri/src/models/: analysis.rs  live_game.rs  mastery.rs  match_.rs  mod.rs  ranked.rs  summoner.rs  timeline.rs
src/components/: ChampionMasteryCard.tsx  ChampionStats.tsx  LiveGameTracker.tsx  LpSparkline.tsx  MasteryStats.tsx  MatchCard.tsx  MatchDetail.tsx  MatchHistory.tsx  MostPlayedChampions.tsx  (+10 more)
(+67 files in other folders)
