[package]
name = "lol-professor"
version = "1.0.0"
description = "League of Legends statistics and match analysis app"
authors = ["LoL Professor"]
edition = "2021"

[lib]
name = "lol_professor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cache LRU
lru = "0.12"

# Tiempo
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

# .env file loading
dotenvy = "0.15"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
